<resources>
    <string name="app_name">Easy SFTP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="removable_storage">Removable Storage</string>
    <string name="internal_storage">Phone Storage</string>
    <string name="storage_name_template">%1$s (%2$s)</string>
    <string name="err_storage_not_loaded">Some storage options could not be loaded!</string>
    <string name="drag_handle_description">Drag handle. Drag to close opened sheet</string>
    <string name="label_server">Server:</string>
    <string name="server_auto_fill_hint">Server IP</string>
    <string name="label_user">Username:</string>
    <string name="label_display_name">Name:</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="password_for">Password for %1$s</string>
    <string name="path">Path</string>
    <string name="hint_folder_path">Folder path</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="paste">Paste</string>
    <string name="rename">Rename</string>
    <string name="copy_file_name_to_clipboard">Copy file name to clipboard</string>

</resources>
